# rust-aws-lambda

./: Cargo.toml  README.md  package-lock.json  package.json  serverless.yml
.github/workflows/: main.yml
downloader/: Cargo.toml
hello/: Cargo.toml
hello/src/: main.rs
resizer/: Cargo.toml
resizer/src/: main.rs
uploader/: Cargo.toml
uploader/src/: main.rs
world/: Cargo.toml
